--- a/webant/templates/opens_desc.xml
+++ b/webant/templates/opens_desc.xml
@@ -1,13 +1,14 @@
 <?xml version="1.0" encoding="UTF-8"?>
- <OpenSearchDescription xmlns="http://a9.com/-/spec/opensearch/1.1/">
-   <ShortName>Web Search</ShortName>
-   <Description>Use Example.com to search the Web.</Description>
-   <Tags>example web</Tags>
-   <Contact>admin@example.com</Contact>
-   <Url type="application/rss+xml"
-        template="{{ request.scheme }}://{{request.host}}{{url_for('search',format='application/rss+xml') |e }}&amp;q={searchTerms}"/>
-   <Url type="text/html" 
-        template="{{ request.scheme }}://{{request.host}}{{url_for('search',format='text/html') |e }}&amp;q={searchTerms}"/>
-   <OutputEncoding>UTF-8</OutputEncoding>
-   <InputEncoding>UTF-8</InputEncoding>
- </OpenSearchDescription>
+<OpenSearchDescription xmlns="http://a9.com/-/spec/opensearch/1.1/">
+	<ShortName>{{request.host}}</ShortName>
+	<Description>A libreant instance</Description>
+	<Url type="application/rss+xml"
+		rel="results"
+		template="{{ request.scheme }}://{{request.host}}{{url_for('search',format='application/rss+xml') |e }}&amp;q={searchTerms}"/>
+	<Url type="text/html" 
+		rel="results"
+		template="{{ request.scheme }}://{{request.host}}{{url_for('search',format='text/html') |e }}&amp;q={searchTerms}"/>
+	<OutputEncoding>UTF-8</OutputEncoding>
+	<InputEncoding>UTF-8</InputEncoding>
+	<Developer>
+</OpenSearchDescription>
